--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://kaviyasrinivasan.github.io/Tic-Tac-Toe",
   "name": "tic_tac_toe",
   "version": "0.1.0",
   "private": true,
